# BigDataDocAutoShell

./: .env.example  .gitignore  README.md  deduplicate.py  environment.yml  generate_qa.py  main.py  normalize_filenames.py  pyproject.toml  upload_files.py  设计思路.md
src/: __init__.py  config.py  data_storage.py  display.py  document_classifier.py  document_reader.py  information_extractor.py  qa_generator.py
template/: 2办会材料信息.xlsx  3办文材料信息.xlsx  4政策文件信息.xlsx  5政策问答对.xlsx
